// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Access Control creates first level resource 1`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {},
}
`;

exports[`Access Control creates role and not creates role copy or throws error 1`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {},
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates role and not creates role copy or throws error 2`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {},
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates role, resources and permission 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": false,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates role, resources and permission 2`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": true,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates role, resources and permission 3`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": true,
          "update": true,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates role, resources and permission 4`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": true,
          "read": true,
          "update": true,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates role, resources and permission with dynamic checker 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": false,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates role, resources and permission with dynamic checker 2`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "delete": Object {},
        "read": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": true,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates role, resources and permission with dynamic checker 3`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "delete": Object {},
        "read": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "update": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": true,
          "update": true,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates role, resources and permission with dynamic checker 4`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "delete": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "read": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "update": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": true,
          "read": true,
          "update": true,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
}
`;

exports[`Access Control creates second level resource 1`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {},
}
`;

exports[`Access Control imports dump 1`] = `
AccessControl {
  "_permissions": Object {
    "resource1#role1": Permission {
      "dynamicCheckers": Object {
        "create": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "delete": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "read": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "update": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource1",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": [Circular],
            "resource2": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource2",
              "parent": [Circular],
              "path": "resource2",
            },
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource1",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": false,
          "update": true,
        },
      },
    },
    "resource2#role1": Permission {
      "dynamicCheckers": Object {
        "create": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "delete": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "read": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "update": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": false,
          "update": true,
        },
      },
    },
    "resource2#role2": Permission {
      "dynamicCheckers": Object {
        "create": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "delete": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "read": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "update": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role2",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": false,
          "update": true,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "resource1": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource1",
        "parent": [Circular],
        "path": "resource1",
      },
      "resource2": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": [Circular],
        "path": "resource2",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "role1": Role {
      "accessControl": [Circular],
      "name": "role1",
    },
    "role2": Role {
      "accessControl": [Circular],
      "name": "role2",
    },
  },
}
`;
